hphp/hack/test/typecheck/trait_use_precedence_hack.php.exp
File "trait_use_precedence_hack.php", line 15, characters 17-24:
insteadof is a PHP feature that is unsupported in Hack (Naming[2103])
File "trait_use_precedence_hack.php", line 20, characters 32-44:
No instance method `genHelloTrait` in `HelloClass` (Typing[4053])
  File "trait_use_precedence_hack.php", line 19, characters 25-32:
  Did you mean `genHello` instead?
  File "trait_use_precedence_hack.php", line 13, characters 7-16:
  This is why I think it is an object of type HelloClass
  File "trait_use_precedence_hack.php", line 13, characters 7-16:
  Declaration of `HelloClass` is here
